--- a/SageMakerDeploymentProject/SageMaker Project.ipynb
+++ b/SageMakerDeploymentProject/SageMaker Project.ipynb
@@ -868,6 +868,7 @@
     "            batch_y = batch_y.to(device)\n",
     "            \n",
     "            # TODO: Complete this train method to train the model provided.\n",
+	"            optimizer.zero_grad() #Pytorch accumulates gradients.
     "            # forward + backward + optimize\n",
     "            outputs = model(batch_X)\n",
     "            loss = loss_fn(outputs, batch_y)\n",
