--- a/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
@@ -2402,7 +2402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** Based on their correlation.. We can see that every feature shares a highly correlation with the others features. Since I want to eliminated redundant features, I selected first and second containment features and LONG Common Subsequences, with the hypothesis that with just those 3 features I will keep the most relevant information."
+    "**Answer:** Based on their correlation.. We can see that every feature shares a high correlation with the others features. Since I want to eliminated redundant features, I selected first and second *containment* features and *Long Common Subsequences*, with the hypothesis that with just those 3 features I will keep the most relevant information."
    ]
   },
   {
@@ -2552,13 +2552,6 @@
     "\n",
     "Now that you've done some feature engineering and created some training and test data, you are ready to train and deploy a plagiarism classification model. The next notebook will utilize SageMaker resources to train and test a model that you design."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
