--- a/CapStone-Arvato/Arvato Project_Part 2_Supervised Learning Model.ipynb
+++ b/CapStone-Arvato/Arvato Project_Part 2_Supervised Learning Model.ipynb
@@ -15479,7 +15479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![sumbit](img/kaggle_2.PNG)"
+    "![sumbit](img/kaggle.PNG)"
    ]
   },
   {
